Porting styles to official Mapzen styleguide and fixing a breakpoint on mobile

--- a/src/Assets/css/common/_posts.scss
+++ b/src/Assets/css/common/_posts.scss
@@ -9,8 +9,8 @@
 .static-content {
   // “Owl selector” provides a 1em margin between each child element in our content
   > * + * {
-    margin-top: 1.2em;
-    margin-bottom: 1.2em;
+    // margin-top: 1.2em;
+    // margin-bottom: 1.2em;
   }
 
   p {
